--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input class="form-control" type="text">
-                    <button class="generate-btn">Generate Pin</button>
+                    <input id="display-pin" class="form-control" type="text">
+                    <button onclick="generatePin()" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
             <div class="col-md-6">
@@ -53,7 +53,7 @@
             <p class="notify">❌ Pin Didn't Match, Please try again</p>
             <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
         </div>
-    </div>
+    </div> 
     <script src="cal.js"></script>
 </body>
 </html>
